Update bio infos

--- a/config.toml
+++ b/config.toml
@@ -32,7 +32,7 @@ disableKinds = ["page", "section", "taxonomy", "taxonomyTerm", "RSS", "sitemap",
   # Link custom assets relative to /static
   #custom_js  = [""]
   #custom_css = ["backgraound.css", "icons.css"]
-	
+
   relativeURLs = true
   uglyURLs = true
 
@@ -48,14 +48,14 @@ disableKinds = ["page", "section", "taxonomy", "taxonomyTerm", "RSS", "sitemap",
     name = "Chiara Corrado"
     # Avatars can be written to images/avatars/
     avatar = "chiaracorrado.jpeg"
-    position = "Software Developer"
+    position = "Software Architect"
     livesIn = "[Pisa, Italy](https://goo.gl/maps/23eCkWSmkW7BchnK8)"
     scope = [
-        "[Women Techmaker Ambassador](https://www.womentechmakers.com/)",
+        "[Women Techmaker Ambassador](https://www.womentechmakers.com/ambassadors/profiles/5f91b62008d3c01989865990/chiara_corrado)",
         "[GDG Pisa](http://gdgpisa.it/) Organizer",
         "[Debian](https://debian.org) & [Open Source](https://en.wikipedia.org/wiki/Open-source_model) Lover"
       ]
-    biography = """Chiara is a software developer, a creative technologist and a dreamer. At 10 years old, she had her first computer with a 56k network card and 20GB of hard disk and she learned to use it and repair it by herself. She is currently making awesome things in an Italian SME. Chiara is enjoying coding in many program languages, but she is always focused to help others with her problem-solving capability. In her spare time, Chiara organizes events to support women in technology and she practices yoga, gardening, reading, cooking and try to live more ethically with the zero waste philosophy."""
+    biography = """Chiara is a software architect, a creative technologist and a dreamer. At 10 years old, she had her first computer with a 56k network card and 20GB of hard disk and she learned to use it and repair it by herself. She is currently making awesome things in an Italian SME. Chiara is enjoying coding in many program languages, but she is always focused to help others with her problem-solving capability. In her spare time, Chiara organizes events to support women in technology and she practices yoga, gardening, reading, cooking and try to live more ethically with the zero waste philosophy."""
 
   # Contact form settings
 
@@ -118,7 +118,7 @@ disableKinds = ["page", "section", "taxonomy", "taxonomyTerm", "RSS", "sitemap",
     icon = "fa-instagram"
     link = "https://www.instagram.com/kiaruzza_dev/"
     target = "_blank"
-    
+
   [[params.social]]
     title = "Linkedin"
     icon = "fa-linkedin"
@@ -131,13 +131,13 @@ disableKinds = ["page", "section", "taxonomy", "taxonomyTerm", "RSS", "sitemap",
     icon = "fa-facebook"
     link = "https://www.facebook.com/chiara.corrado/"
     target = "_blank"
-    
+
   [[params.social]]
     title = "Github"
     icon = "fa-github"
     link = "https://github.com/kiaruzza"
     target = "_blank"
-    
+
   [[params.social]]
     title = "Medium"
     icon = "fa-medium"
